fix: fix wrap

--- a/styles/components/course-card.scss
+++ b/styles/components/course-card.scss
@@ -38,6 +38,7 @@
 
   &__row {
     display: flex;
+    flex: wrap;
     gap: 0.5rem;
   }
 }
